# sharewithme

./: Dockerfile  docker-compose.yml
commands/: start.sh
src/: alembic.ini  pyproject.toml
src/app/: main.py
src/app/api/v1/: routes.py
src/app/api/v1/controllers/: posts.py
src/app/core/: admin.py  db.py  settings.py
src/app/infra/adapters/dto/: post.py
src/app/infra/db/models/: __init__.py  base.py  post.py  theme.py
src/app/infra/migrations/: env.py
src/app/infra/migrations/versions/: a367675ccc22_init.py
src/app/infra/repositories/postgresql/: common.py  posts.py
src/app/interfaces/db/: posts.py
