[tool.poetry]
name = "sharewithme"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
alembic = "^1.13.1"
uvicorn = "^0.29.0"
sqladmin = "^0.16.1"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
mako = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

